ignore list updated

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                              <h2 class="text-2xl font-bold text-center text-white mb-4">Analyze Full Market</h2>
                              <div class="pt-2 flex-grow">
                                <label for="exclude-input" class="block mb-2 text-sm font-medium text-gray-300 text-center">Exclude tokens (comma-separated)</label>
-                               <input type="text" id="exclude-input" class="bg-gray-700 border border-gray-600 text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-5/6 mx-auto p-2.5" value="BTC, ETH, ETHBTC, PAXG, SOL, USDC, USDE, XAUT">
+                               <input type="text" id="exclude-input" class="bg-gray-700 border border-gray-600 text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-5/6 mx-auto p-2.5" value="BTC, ETH, ETHBTC, PAXG, RLUSD, SOL, USD1, USDC, USDE, XAUT">
                              </div>
                              <div class="text-center mt-6">
                                 <button id="analyze-market-btn" class="bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-6 rounded-lg transition duration-300 flex items-center justify-center gap-2 min-w-[200px] w-full sm:w-auto mx-auto">
