feat: Introduce app versioning, centralized error handling, input validation, and configurable performance constants.

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
     </template>
 
     <!-- App Logic -->
-    <script src="app.js"></script>
+    <script src="app.js?v=2.0"></script>
 </body>
 
 </html>
